@@ -4,6 +4,7 @@ import com.SparkHacks2026.SparkHacks2026.models.Connection;
 import com.SparkHacks2026.SparkHacks2026.models.Profile;
 import com.SparkHacks2026.SparkHacks2026.repositories.ConnectionRepository;
 import com.SparkHacks2026.SparkHacks2026.repositories.ProfileRepository;
+import com.SparkHacks2026.SparkHacks2026.repositories.QueueRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.*;
@@ -11,29 +12,37 @@ import java.util.stream.Collectors;
 
 @Service
 public class RecommendationService {
-    @Autowired private ProfileRepository profileRepository;
-    @Autowired private ConnectionRepository connectionRepository;
+    @Autowired
+    private ProfileRepository profileRepository;
+    @Autowired
+    private ConnectionRepository connectionRepository;
 
     public List<Profile> getRecommendedProfiles(String profileId, String zipcode) {
         // 1. Get IDs of people this user has already swiped on or matched with
-        // We find all connections involving this profileId
+        // We fetch all connections where this user is a participant
         List<Connection> existingConnections = connectionRepository.findByUsersContaining(profileId);
 
+        // Exclude anyone where a connection already exists (Pending or Accepted)
+        // to prevent duplicate swipes or seeing people you already matched with
         Set<String> excludedIds = existingConnections.stream()
+                .filter(c -> c.getStatus().equals("CONNECTED"))
                 .flatMap(c -> c.getUsers().stream())
                 .collect(Collectors.toSet());
 
         // Always exclude the user's own profile
         excludedIds.add(profileId);
 
-        // 2. Fetch location-based profiles (Zipcode match) and filter out excluded IDs
-        List<Profile> localProfiles = profileRepository.findByZipcode(zipcode).stream()
-                .filter(p -> !excludedIds.contains(p.getId()))
-                .collect(Collectors.toList());
+        // 3. PRIORITY: Get "Awaiting" profiles (Pending connections where YOU are the target)
+        // We filter for PENDING and then convert the List from findAllById into a Stream
+        List<Profile> awaitingProfiles = existingConnections.stream()
+                .filter(c -> "PENDING".equals(c.getStatus()))
+                .flatMap(c -> profileRepository.findAllById(c.getUsers()).stream()) // Added .stream() here to fix the error
+                .filter(p -> !p.getId().equals(profileId)) // Don't add yourself to your own stack
+                .toList();
 
-        List<Profile> cardStack = new ArrayList<>(localProfiles);
+        List<Profile> cardStack = new ArrayList<>(awaitingProfiles);
 
-        // 3. Random overall to fill the stack, again filtering out excluded IDs
+        // 4. Random overall to fill the stack
         List<Profile> allProfiles = profileRepository.findAll();
         Collections.shuffle(allProfiles);
 
